[package]
name = "food-backend"
version = "0.1.0"
authors = ["Jack Greenberg <kcaj@grebneerg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
actix-web = "4.0.0-beta.5"
actix-rt = "2.2.0"
sqlx = { version = "0.5.1", features = [ "postgres", "runtime-actix-rustls" ] }
dotenv = "0.15"
