[package]
name = "food-backend"
version = "0.1.0"
authors = ["Jack Greenberg <kcaj@grebneerg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
listenfd = "0.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.51"
sqlx = { version = "0.3", features = [ "postgres" ] }
openidconnect = "2.0.0-beta.1"
dotenv = "0.15"
env_logger = "0.7.1"
log = "0.4.14"
anyhow = "1.0.28"
futures = "0.3.13"
url = { version = "2.1", features = ["serde"] }
reqwest_ = { package = "reqwest", features = ["blocking", "rustls-tls"], version = "0.11", default-features = false }